# kics2

./: .curry-language-server-ignore  .editorconfig  .gitignore  .gitlab-ci.yml  GITINSTALL.md  INSTALL.md  LICENSE  Makefile  Makefile_install_lib  Makefile_lib  README.md  RELNOTES.md  build  configure  package.json  stack-config.yaml.in  stack.yaml  stack.yaml.in
benchmarks/: Benchmarks.curry
boot/: CompileBoot.hs  REPLBoot.hs
build-generator/: README.md  package.json
build-generator/Ninja/: Builder.curry  Pretty.curry  Types.curry
docker/: Dockerfile  Dockerfile-kics2-2.3.0-ubuntu-18.04  Dockerfile-kics2-3.0.0-debian-10  Dockerfile-kics2-3.0.0-ubuntu-20.04  Dockerfile-kics2-3.1.0-ubuntu-22.04  Dockerfile-kics2-3.2.0-ubuntu-22.04  Dockerfile-kics2-3.3.0-ubuntu-24.04  Dockerfile-kics2-3.4.0-ubuntu-24.04  Dockerfile-kics2-3.5.0-ubuntu-24.04  Dockerfile-kics2-3.5.0-ubuntu-25.04  README.md  README.txt  kics2-docker.sh  kics2.sh
docs/src/: Makefile  auxiliary_files.tex  extensions.tex  libraries.tex  manual.bib  manual.tex  usage.tex
include/: logo.txt
mk/: bin.mk  dist.mk  env.mk  lib-install.mk  lib.mk  manual.mk  runtime.mk  scripts.mk  testing.mk  utils.mk
mk-scripts/: echo-highlighted
runtime/: Makefile  PrimTypes.hs  kics2-runtime.cabal  kics2-runtime.cabal.in
runtime-src/: Nat.curry  mkPrimTypes.sh
runtime/idsupplyghc/: IDSupply.hs
runtime/idsupplyioref/: IDSupply.hs
scripts/: compile-all-libs.sh  echo-info.sh  echo-success.sh  kics2.bat  kics2.sh
src/: Analysis.curry  Installation.curry.in  Linker.curry  Makefile  TransTypes.curry
(+62 files in other folders)
